Fix Publish Forms / part 2 -- fix field grid by changing the selector https://linear.app/statamic/issue/ST-648/publish-forms-50percent-width-field-is-stretching-the-full-width-of

--- a/resources/css/components/publish.css
+++ b/resources/css/components/publish.css
@@ -1,7 +1,5 @@
-/* ==========================================================================
-   PUBLISH COMPONENT
-   ========================================================================== */
-
+/* GROUP PUBLISH COMPONENT
+=================================================== */
 .publish-tab-outer {
     @apply flex justify-between;
 }
@@ -39,8 +37,10 @@ code.parent-url {
         padding: 0 0 3px 0;
     }
 }
-
-.publish-fields, .field-grid {
+/* GROUP PUBLISH COMPONENT / FIELDS
+=================================================== */
+.publish-fields,
+.field-grid {
     display: grid;
     --grid-columns: 12;
     grid-template-columns: repeat(var(--grid-columns), 1fr);
@@ -56,17 +56,34 @@ code.parent-url {
 
         @variant lg {
             &.field-w-25  { --col-span: calc(var(--grid-columns) * 0.25); }
-            &.field-w-25  { --col-span: calc(var(--grid-columns) * 0.25); }
             &.field-w-33  { --col-span: calc(var(--grid-columns) * 0.333); }
             &.field-w-50  { --col-span: calc(var(--grid-columns) * 0.5); }
             &.field-w-66  { --col-span: calc(var(--grid-columns) * 0.666); }
             &.field-w-75  { --col-span: calc(var(--grid-columns) * 0.75); }
-            &.field-w-undefined { --col-span: calc(var(--grid-columns) * 1); }
+            &.field-w-undefined, .field-w-100 { --col-span: calc(var(--grid-columns) * 1); }
         }
     }
 }
+/* GROUP PUBLISH COMPONENT / FIELD GRID (e.g. BLUEPRINT)
+=================================================== */
+.field-grid {
+    @variant lg {
+        .field-w-25  { --col-span: calc(var(--grid-columns) * 0.25); }
+        .field-w-33  { --col-span: calc(var(--grid-columns) * 0.333); }
+        .field-w-50  { --col-span: calc(var(--grid-columns) * 0.5); }
+        .field-w-66  { --col-span: calc(var(--grid-columns) * 0.666); }
+        .field-w-75  { --col-span: calc(var(--grid-columns) * 0.75); }
+        .field-w-undefined, .field-w-100 { --col-span: calc(var(--grid-columns) * 1); }
+    }
 
+    > * {
+        grid-column: span var(--col-span, var(--grid-columns));
+    }
+}
+/* GROUP PUBLISH COMPONENT / FIELD
+=================================================== */
 .publish-field {
+    @apply relative;
     .read-only-overlay {
         @apply absolute inset-0 cursor-not-allowed bg-white/25;
         z-index: 100;
@@ -85,10 +102,6 @@ code.parent-url {
             }
         }
     }
-}
-
-.publish-field {
-    @apply relative;
 }
 
 .publish-field-label {
